--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hapirobo.shortcut_template">
+    package="com.hapirobo.apk_template">
 
     <application
         android:allowBackup="true"
@@ -14,7 +14,7 @@
             android:name="com.robotemi.sdk.metadata.SKILL"
             android:value="@string/app_name"/>
 
-        <activity android:name="com.hapirobo.shortcut_template.MainActivity">
+        <activity android:name="com.hapirobo.apk_template.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
